@@ -180,6 +180,8 @@
 
 - when printing sparse matrices column names are suppressed.
   For matrices *with* non-empty column names, this is now message()d.
+  Alternatively, can now print(<sparseMatrix>, col.names = TRUE, .....)
 
-  Alternatively, now how print(<sparseMatrix>, col.names = TRUE, .....)
-
+- Fast colSums(), rowSums() etc : first for dgCMatrix, but then
+  'arules' needs fast colSums() and rowSums() - for ngCMatrix;
+  do it for "nMatrix" and "lMatrix" and return *integer*
