@@ -142,5 +142,6 @@ Check for DimNames propagation in coercion and other operations.
   !M  where M is "sparseMatrix", currently always gives dense. This only
   makes sense when M is ``really sparse''.
 
-- 'arules' needs fast colSums() and rowSums() - for ngCMatrix;
-  do it for "nMatrix" and "lMatrix" and return *integer*
+- log1p(<sparseMatrix>) "should" give <dsparseMatrix>
+  Pretty surely, this would happen automagically, if "log1p" became part of
+  "Math" group generic.
